--- a/main.html
+++ b/main.html
@@ -65,63 +65,63 @@
                 <h1 class="project-title">Cпециалист</h1>
                 <h2 class="project-type">2018</h2>
         </div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1117935/', '_blank')">
                 <div class="project-image poselentsy-image"></div>
                 <h1 class="project-title">Поселенцы</h2>
                 <h2 class="project-type">2018</h2>
         </div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1346504/', '_blank')">
                 <div class="project-image zmei-image"></div>
                 <h1 class="project-title">Змеи и Лестницы</h2>
                 <h2 class="project-type">2020</h2>
         </div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1412533/', '_blank')">
                 <div class="project-image kapkan-image"></div>
                 <h1 class="project-title">Капкан для Монстра</h2>
                 <h2 class="project-type">2020</h2>
         </div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718580/', '_blank')">
                 <div class="project-image tayna-image"></div>
                 <h1 class="project-title">Тайна Спящей Дамы</h2>
                 <h2 class="project-type">2021</h2>
         </div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718645/', '_blank')">
                 <div class="project-image staya-image"></div>
                 <h1 class="project-title">Стая</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5003004/', '_blank')">
                 <div class="project-image repeynik-image"></div>
                 <h1 class="project-title">Репейник</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5211475/', '_blank')">
                 <div class="project-image romashek-image"></div>
                 <h1 class="project-title">Город Ромашек</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5292662/', '_blank')">
                 <div class="project-image zhenih-image"></div>
                 <h1 class="project-title">Жених из Хорошей Семьи</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5270344/', '_blank')">
                 <div class="project-image strah-image"></div>
                 <h1 class="project-title">Страх над Невой</h2>
                 <h2 class="project-type">2023</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5400476/', '_blank')">
                 <div class="project-image tenn-image"></div>
                 <h1 class="project-title">Тень саламандры</h2>
                 <h2 class="project-type">2023</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5401097/', '_blank')">
                 <div class="project-image semm-image"></div>
                 <h1 class="project-title">Семь минус Один</h2>
                 <h2 class="project-type">2023</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6388978/', '_blank')">
                 <div class="project-image vzglyad-image"></div>
                 <h1 class="project-title">Взгляд русалки</h2>
                 <h2 class="project-type">2024</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
                 <div class="project-image pochta-image"></div>
                 <h1 class="project-title">Почтальонша</h2>
                 <h2 class="project-type">2024</h2></div>
-        <div class="project">
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
                 <div class="project-image konec-image"></div>
                 <h1 class="project-title">Конец Игры</h2>
                 <h2 class="project-type">2024</h2></div>
