--- a/main.html
+++ b/main.html
@@ -47,10 +47,7 @@
 <div class="textblock" id="about">О НАС</div>
 <div class="about">
 <div class="image-about" src="logo.png" alt=""></div>
-<p class="paragraph-about">"Студия РоЕл" — продакшн полного цикла, основанный в 2015 году генеральным продюсером Елизаветой Елистратовой. Мы создаём сериалы, фильмы, истории, которые остаются в памяти.
-    Наращивая опыт, силу, приобретая новых друзей и партнёров, с каждым новым проектом мы всё больше загораемся любовью к своему делу и становимся ещё более любопытными и амбициозными. 
-    Открыты к сотрудничеству с авторами — всегда ищем цепляющие заявки и сценарии.
-    "Студия РоЕл" входит в Ассоциацию продюсеров кино и телевидения (АПКиТ).</p>
+<p class="paragraph-about">..."Студия РоЕл" — продакшн полного цикла, основанный в 2015 году. Мы создаём сериалы, фильмы, истории, которые остаются в памяти. Наращивая опыт, силу, приобретая новых друзей и партнёров, с каждым новым проектом мы всё больше загораемся любовью к своему делу и становимся ещё более любопытными и амбициозными. Открыты к сотрудничеству с авторами — всегда ищем цепляющие заявки и сценарии. "Студия РоЕл" входит в Ассоциацию продюсеров кино и телевидения (АПКиТ).</p>
 </div><div id="projects"></div>
 <div class="textblock" style="margin-bottom: 30px">НАШИ ПРОЕКТЫ</div>
 <div class="projects">
