--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 <a class="button left" href="#about">О НАС</a>
 <a class="button left" href="#projects">ПРОЕКТЫ</a>
 <a class="button left" href="#contacts">КОНТАКТЫ</a>
-<a class="button right"  href="https://vk.com/public212979911">VK</a>
+<a class="button right"  href="https://t.me/roelstudio">TG</a>
 <a id="togglebar" class = "right header-menu nav-toggle">
     <span class="bar"></span>
     <span class="bar"></span>
