--- a/main.html
+++ b/main.html
@@ -41,8 +41,8 @@
     </div>
     </div>
 <div class="headerwrapper"></div>
-<div id="prevchangingimage"  alt="">СТРАХ НАД<br> НЕВОЙ</div>
-<div id="changingimage"  alt="">СТРАХ НАД<br> НЕВОЙ</div>
+<div id="prevchangingimage"  alt=""><div class="fulloader fulloader"><div class="loadelem ful"></div></div>СТРАХ НАД<br> НЕВОЙ</div>
+<div id="changingimage"  alt=""><div class="fulloader fulloader"><div class="loadelem ful"></div></div>СТРАХ НАД<br> НЕВОЙ</div>
 <div id="about"></div>
 <div class="textblock" id="about">О НАС</div>
 <div class="about">
