--- a/main.html
+++ b/main.html
@@ -136,9 +136,9 @@
 <a href="https://vk.com/public212979911" class="soc-icon"><img class="logo-vk" src="vk.png" alt=""></a><a class="soc-icon" href="https://t.me/roelstudio"><img class="logo-tg" src="telegram.png" alt=""></a>
 </div>
 </div>
-<form action="https://script.google.com/macros/s/AKfycbwh2BGI532WdLO48mlcYV8AisbZ7Ve91BMpO7UYgESeeY1lDjn6JE60SXQOedvoYe-u/exec" target="_self" method="get">
+<form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbwh2BGI532WdLO48mlcYV8AisbZ7Ve91BMpO7UYgESeeY1lDjn6JE60SXQOedvoYe-u/exec" target="_self" method="get">
 <input class="reg" name="Name" id='name-button' placeholder="Имя" type="text">
-<input class="reg" name="Phone" id='phone-button' placeholder="Телефон" type="text">
+<input class="reg" name="Phone" id='phone-button' placeholder="Телефон" type="tel">
 <textarea class="reg" name="Message" id='message-button' placeholder="Сообщение" type="text"></textarea>
 <input class="reg" name="Email" id='email-button' placeholder="Почта*" type="email">
 <input id='submit-button' type="submit">
