--- a/main.html
+++ b/main.html
@@ -58,68 +58,68 @@
     <div class="pseudobox-top"></div>
     <div class="projectbox">
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1233172/', '_blank')">
-                <div class="project-image specialist-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="specialist.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Cпециалист</h1>
                 <h2 class="project-type">2018</h2>
         </div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1117935/', '_blank')">
-                <div class="project-image poselentsy-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="poselentsy.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Поселенцы</h2>
                 <h2 class="project-type">2018</h2>
         </div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1346504/', '_blank')">
-                <div class="project-image zmei-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="zmei.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Змеи и Лестницы</h2>
                 <h2 class="project-type">2020</h2>
         </div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1412533/', '_blank')">
-                <div class="project-image kapkan-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="kapkan.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Капкан для Монстра</h2>
                 <h2 class="project-type">2020</h2>
         </div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718580/', '_blank')">
-                <div class="project-image tayna-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="tayna.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тайна Спящей Дамы</h2>
                 <h2 class="project-type">2021</h2>
         </div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718645/', '_blank')">
-                <div class="project-image staya-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="staya.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Стая</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5003004/', '_blank')">
-                <div class="project-image repeynik-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="repeynik.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Репейник</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5211475/', '_blank')">
-                <div class="project-image romashek-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="romashek.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Город Ромашек</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5292662/', '_blank')">
-                <div class="project-image zhenih-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="zhenih.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Жених из Хорошей Семьи</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5270344/', '_blank')">
-                <div class="project-image strah-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Страх над Невой</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5400476/', '_blank')">
-                <div class="project-image tenn-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="tenn.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тень саламандры</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5401097/', '_blank')">
-                <div class="project-image semm-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="semm.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Семь минус Один</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6388978/', '_blank')">
-                <div class="project-image vzglyad-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="vzglyad.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Взгляд русалки</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
-                <div class="project-image pochta-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Почтальонша</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
-                <div class="project-image konec-image"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="konec.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Конец Игры</h2>
                 <h2 class="project-type">2024</h2></div>
         </div>
