--- a/main.html
+++ b/main.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
 <div class="header" id="header">
@@ -58,7 +57,7 @@
     <div class="pseudobox-top"></div>
     <div class="projectbox">
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1233172/', '_blank')">
-                <div class="project-image"><img src="specialist.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="spetsialist.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Cпециалист</h1>
                 <h2 class="project-type">2018</h2>
         </div>
@@ -122,7 +121,23 @@
                 <div class="project-image"><img src="konec.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Конец Игры</h2>
                 <h2 class="project-type">2024</h2></div>
-        </div>
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
+                <div class="project-image"><img src="kukushonok.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <h1 class="project-title">Кукушонок</h2>
+                <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
+                <div class="project-image"><img src="denezhnoe.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <h1 class="project-title">Денежное Дерево</h2>
+                <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
+                <div class="project-image"><img src="unspecified.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <h1 class="project-title">Тайна Римских Цифр</h2>
+                <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
+                <div class="project-image"><img src="unspecified.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <h1 class="project-title">Приговор</h2>
+                <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
+        </div></div>
         <div class="pseudobox-bottom"></div>
 </div>
 <div id="contacts"></div>
@@ -149,8 +164,6 @@
 <a class="apps-image-container" href="https://www.rusproducers.com/"><img class="apps-image" src="apkit.svg" alt=""></a>
 <p class="apps-text">2025</p>
 </div>
-<script src="royel.js">
-
-</script>
+<script src="royel.js"></script>
 </body>
 </html>
