--- a/main.html
+++ b/main.html
@@ -59,28 +59,23 @@
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1233172/', '_blank')">
                 <div class="project-image"><img src="spetsialist.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Cпециалист</h1>
-                <h2 class="project-type">2018</h2>
-        </div>
+                <h2 class="project-type">2018</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1117935/', '_blank')">
                 <div class="project-image"><img src="poselentsy.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Поселенцы</h2>
-                <h2 class="project-type">2018</h2>
-        </div>
+                <h2 class="project-type">2018</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1346504/', '_blank')">
                 <div class="project-image"><img src="zmei.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Змеи и Лестницы</h2>
-                <h2 class="project-type">2020</h2>
-        </div>
+                <h2 class="project-type">2020</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1412533/', '_blank')">
                 <div class="project-image"><img src="kapkan.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Капкан для Монстра</h2>
-                <h2 class="project-type">2020</h2>
-        </div>
+                <h2 class="project-type">2020</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718580/', '_blank')">
                 <div class="project-image"><img src="tayna.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тайна Спящей Дамы</h2>
-                <h2 class="project-type">2021</h2>
-        </div>
+                <h2 class="project-type">2021</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718645/', '_blank')">
                 <div class="project-image"><img src="staya.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Стая</h2>
@@ -97,10 +92,6 @@
                 <div class="project-image"><img src="zhenih.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Жених из Хорошей Семьи</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5270344/', '_blank')">
-                <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Страх над Невой</h2>
-                <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5400476/', '_blank')">
                 <div class="project-image"><img src="tenn.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тень саламандры</h2>
@@ -113,14 +104,18 @@
                 <div class="project-image"><img src="vzglyad.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Взгляд русалки</h2>
                 <h2 class="project-type">2024</h2></div>
-        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
-                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Почтальонша</h2>
-                <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
                 <div class="project-image"><img src="konec.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Конец Игры</h2>
                 <h2 class="project-type">2024</h2></div>
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
+                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <h1 class="project-title">Почтальонша</h2>
+                <h2 class="project-type">2024</h2></div>
+        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5270344/', '_blank')">
+                <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <h1 class="project-title">Страх над Невой</h2>
+                <h2 class="project-type">2023 - ...</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
                 <div class="project-image"><img src="kukushonok.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Кукушонок</h2>
@@ -137,12 +132,11 @@
                 <div class="project-image"><img src="unspecified.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Приговор</h2>
                 <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
-        </div></div>
+        </div>
         <div class="pseudobox-bottom"></div>
 </div>
 <div id="contacts"></div>
 <div class="textblock">КОНТАКТЫ</div>
-
 <div class="contactbox">
 <div>
 <div class="contacts-description">
