--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
                 <h1 class="project-title">Змеи и Лестницы</h2>
                 <h2 class="project-type">2020</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1412533/', '_blank')">
-                <div class="project-image"><img src="kapkan.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="kapkan.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Капкан для Монстра</h2>
                 <h2 class="project-type">2020</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718580/', '_blank')">
@@ -77,7 +77,7 @@
                 <h1 class="project-title">Тайна Спящей Дамы</h2>
                 <h2 class="project-type">2021</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718645/', '_blank')">
-                <div class="project-image"><img src="staya.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="staya.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Стая</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5003004/', '_blank')">
@@ -97,7 +97,7 @@
                 <h1 class="project-title">Тень саламандры</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5401097/', '_blank')">
-                <div class="project-image"><img src="semm.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="semm.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Семь минус Один</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6388978/', '_blank')">
