--- a/main.html
+++ b/main.html
@@ -56,79 +56,79 @@
     </div>
     <div class="pseudobox-top"></div>
     <div class="projectbox">
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1233172/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/124082/annot/', '_blank')">
                 <div class="project-image"><img src="spetsialist.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Cпециалист</h1>
                 <h2 class="project-type">2018</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1117935/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/129696/annot/', '_blank')">
                 <div class="project-image"><img src="poselentsy.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Поселенцы</h2>
                 <h2 class="project-type">2018</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1346504/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/135503/annot/', '_blank')">
                 <div class="project-image"><img src="zmei.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Змеи и Лестницы</h2>
                 <h2 class="project-type">2020</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/1412533/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/138143/annot/', '_blank')">
                 <div class="project-image"><img src="kapkan.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Капкан для Монстра</h2>
                 <h2 class="project-type">2020</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718580/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/148256/annot/', '_blank')">
                 <div class="project-image"><img src="tayna.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тайна Спящей Дамы</h2>
                 <h2 class="project-type">2021</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/4718645/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/148381/annot/', '_blank')">
                 <div class="project-image"><img src="staya.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Стая</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5003004/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/157907/annot/', '_blank')">
                 <div class="project-image"><img src="repeynik.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Репейник</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5211475/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/159050/annot/', '_blank')">
                 <div class="project-image"><img src="romashek.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Город Ромашек</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5292662/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/159639/annot/', '_blank')">
                 <div class="project-image"><img src="zhenih.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Жених из Хорошей Семьи</h2>
                 <h2 class="project-type">2022</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5400476/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/173548/annot/', '_blank')">
                 <div class="project-image"><img src="tenn.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тень саламандры</h2>
                 <h2 class="project-type">2023</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5401097/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/173549/annot/', '_blank')">
                 <div class="project-image"><img src="semm.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Семь минус Один</h2>
                 <h2 class="project-type">2023</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6388978/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/188280/annot/', '_blank')">
                 <div class="project-image"><img src="vzglyad.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Взгляд русалки</h2>
                 <h2 class="project-type">2024</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/185468/annot/', '_blank')">
                 <div class="project-image"><img src="konec.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Конец Игры</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
                 <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Почтальонша</h2>
-                <h2 class="project-type">2024</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/5270344/', '_blank')">
+                <h2 class="project-type">2024 - ...</h2></div>
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/167268/annot/', '_blank')">
                 <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Страх над Невой</h2>
                 <h2 class="project-type">2023 - ...</h2></div>
-        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/184673/annot/', '_blank')">
                 <div class="project-image"><img src="kukushonok.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Кукушонок</h2>
                 <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/195739/annot/', '_blank')">
                 <div class="project-image"><img src="denezhnoe.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Денежное Дерево</h2>
                 <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
-        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/196733/annot/', '_blank')">
                 <div class="project-image"><img src="unspecified.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тайна Римских Цифр</h2>
                 <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
-        <div class="project" onclick="window.open('https://www.kinopoisk.ru/series/6411352/', '_blank')">
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/198540/annot/', '_blank')">
                 <div class="project-image"><img src="unspecified.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Приговор</h2>
                 <h2 class="project-type">В ПРОЦЕССЕ</h2></div>
