--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
                 <h1 class="project-title">Страх над Невой</h2>
                 <h2 class="project-type">2023 - ...</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/184673/annot/', '_blank')">
-                <div class="project-image"><img src="kukushonok.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="kukushonok.jpg" lowsrc="1.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Кукушонок</h2>
                 <h2 class="project-type">ПРОИЗВОДСТВО</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/195739/annot/', '_blank')">
