--- a/main.html
+++ b/main.html
@@ -117,21 +117,21 @@
                 <h1 class="project-title">Страх над Невой</h2>
                 <h2 class="project-type">2023 - ...</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/184673/annot/', '_blank')">
-                <div class="project-image"><img src="kukushonok.jpg" lowsrc="1.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="kukushonok.png" lowsrc="1.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Кукушонок</h2>
-                <h2 class="project-type">ПРОИЗВОДСТВО</h2></div>
+                <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/195739/annot/', '_blank')">
-                <div class="project-image"><img src="denezhnoe.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="denezhnoe.png" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Денежное Дерево</h2>
-                <h2 class="project-type">ПРОИЗВОДСТВО</h2></div>
+                <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/196733/annot/', '_blank')">
                 <div class="project-image"><img src="rimskih.png" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Тайна Римских Цифр</h2>
-                <h2 class="project-type">ПРОИЗВОДСТВО</h2></div>
+                <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/198540/annot/', '_blank')">
                 <div class="project-image"><img src="prigovor.png" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
                 <h1 class="project-title">Приговор</h2>
-                <h2 class="project-type">ПРОИЗВОДСТВО</h2></div>
+                <h2 class="project-type">В производстве</h2></div>
         </div>
         <div class="pseudobox-bottom"></div>
 </div>
